--- a/www/js/modules/drugs/individual.html
+++ b/www/js/modules/drugs/individual.html
@@ -5,10 +5,10 @@
                 <ion-item ng-if="::item.name != 'null'" class="item-divider item-energized">{{::item.name}}
                 </ion-item>
                 <ion-item ng-if="::item.email !=='null'" class="item-thumbnail-left">
-                    <img src="img/help.jpg" fallback-src="img/help.jpg">
+                    <img src="img/logo.png">
                     <p>{{::item.name}}</p>
                     <h2>{{::item.email}}</h2>
-                    <h3>{{::item.mobile}}</h3>
+                    <a href="tel:{{item.mobile}}">Call: {{::item.mobile}}</a>
                     <p ng-if="::item.address!='null'">{{::item.address}}</p>
                 </ion-item>
                 <ion-item ng-if="::item.details!='null'"  class="item-thumbnail-left item-icon-right">
